--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><defs><linearGradient id=%22g%22 x1=%220%22 y1=%220%22 x2=%221%22 y2=%221%22><stop offset=%220%22 stop-color=%22%230084ff%22/><stop offset=%221%22 stop-color=%22%23b300ff%22/></linearGradient></defs><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22url(%23g)%22/><path d=%22M30 40 L50 60 L70 40 M30 55 L50 75 L70 55%22 stroke=%22white%22 stroke-width=%228%22 fill=%22none%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22/></svg>">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?v=3.6">
-    <link rel="manifest" href="manifest.json?v=3.6">
+    <link rel="stylesheet" href="css/style.css?v=3.7">
+    <link rel="manifest" href="manifest.json?v=3.7">
     <meta name="theme-color" content="#0a0a0a">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -274,6 +274,14 @@
                     <button class="btn-main" style="background:var(--accent); font-size:13px; margin-bottom:10px;"
                         onclick="app.promptInstall()">Установить Messenger</button>
                 </div>
+
+                <div style="margin-top:20px; border-top:1px solid var(--border); padding-top:15px; opacity:0.8;">
+                    <h3 style="font-size:14px; margin-bottom:10px;">🌐 Проблемы с связью?</h3>
+                    <p style="font-size:11px; color:var(--text-dim); line-height:1.4;">
+                        P2P соединение может блокироваться провайдером или фаерволом. Если не удается написать другу в
+                        другую страну, попробуйте сменить сеть (например, на мобильный интернет).
+                    </p>
+                </div>
             </div>
 
             <div style="display:flex; gap:10px; margin-top:20px; border-top:1px solid var(--border); padding-top:15px;">
@@ -458,12 +466,12 @@
     </div>
 
     <!-- Core & Modules -->
-    <script src="js/app.js?v=3.6"></script>
-    <script src="js/utils.js?v=3.6"></script>
-    <script src="js/crypto.js?v=3.6"></script>
-    <script src="js/auth.js?v=3.6"></script>
-    <script src="js/sync.js?v=3.6"></script>
-    <script src="js/ui.js?v=3.6"></script>
+    <script src="js/app.js?v=3.7"></script>
+    <script src="js/utils.js?v=3.7"></script>
+    <script src="js/crypto.js?v=3.7"></script>
+    <script src="js/auth.js?v=3.7"></script>
+    <script src="js/sync.js?v=3.7"></script>
+    <script src="js/ui.js?v=3.7"></script>
 
     <!-- Init -->
     <script>
