--- a/index.html
+++ b/index.html
@@ -307,8 +307,9 @@
                 <div style="margin-top:20px; border-top:1px solid var(--border); padding-top:15px; opacity:0.8;">
                     <h3 style="font-size:14px; margin-bottom:10px;">❓ Проблемы с связью?</h3>
                     <p style="font-size:11px; color:var(--text-dim); line-height:1.4;">
-                        P2P соединение может блокироваться провайдером. Если не удается найти друга, попробуйте сменить
-                        сеть или использовать свои серверы сигналов выше.
+                        P2P соединение может блокироваться провайдером. Если вы используете Cloudflare, отключите
+                        <b>Rocket Loader</b> и убедитесь, что <b>WebSockets</b> включены. В других случаях попробуйте
+                        сменить сеть или использовать свои серверы сигналов выше.
                     </p>
                 </div>
             </div>
